# back-end-fastapi

./: .env  Dockerfile  Pipfile  app.py  docker-compose.yml  mysqlclient-2.0.0-cp310-cp310-linux_x86_64.whl  mysqlclient-2.1.1-cp310-cp310-linux_x86_64.whl  pyproject.toml  requirements.txt
app/: Dockerfile  app.py  docker-compose.yml  requirements.txt
app/services/: contact_services.py
app/sql/: mysql.py
sql/: app.env  mysql.py  postgres.py
