[tool.poetry]
name = "contact-book-backend"
version = "0.1.0"
description = ""
authors = ["leandrovarela94 <leandrovarela.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
mysqlclient = "^2.1.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
